# greeting-receiver

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build_and_load_image.sh  compose.yaml  debezium.json  debezium_update.json  docker-compose.yml  docker-compose.yml.old
.github/workflows/: docker-image.yml  docker-publish.yml
.sqlx/: query-0b6a9e28c2136c4f616863c0763313b164556639809ee0ab5430cf2cce593f52.json  query-49964bb60ab6f525422d04c699f42e71ac4cdf181f54ef7e364b77fbc1774f3b.json  query-de54808cd5b9f10219e388e66fceaa1a0213ff905cafbc9c3d540b3040676956.json
kubernetes/: greeting-distributor.yaml  greeting-receiver.yaml  greeting-rust.yaml  helm-my-lgtm-stack-values.yaml  helm-otel-collector-values.yaml  kafka-connect.yaml  kafka-zookeeper.yaml  kafka.yaml  postgres-greeting.yaml
migrations/: 20231202_create_tables.sql  20240202210653_initial-tables.sql  20240205210915_logg.sql
res/: openapi.yaml  server.toml
src/: greeting.rs  main.rs  observation.rs  open_telemetry.rs  settings.rs  test.http
src/greeting/: api.rs  kafka_greeting_consumer.rs  kafka_producer.rs  repository.rs  service.rs
