[package]
name = "greetings_rust"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.18.1"
validator_derive = "0.18.1"
derive_more = { version = "1.0.0", features = ["full"]}
uuid = { version = "1.10.0", features = ["v7"]}
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
futures = "0.3"
async-trait = "0.1.77"
log = { version = "0.4.20", features = [] }
config = "0.14.0"
dotenv = "0.15.0"

opentelemetry = {version = "0.25.0",features = ["metrics", "logs"] }
tracing = { version = "0.1.40", features = ["std", "attributes"]}
tracing-opentelemetry = "0.26.0"
greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.1.1"}
